--- a/demo.ipynb
+++ b/demo.ipynb
@@ -421,8 +421,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "584cf1a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: gkeepapi in /usr/local/python/3.12.1/lib/python3.12/site-packages (0.16.0)\n",
+      "Requirement already satisfied: gpsoauth>=1.1.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from gkeepapi) (2.0.0)\n",
+      "Requirement already satisfied: future>=0.16.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from gkeepapi) (1.0.0)\n",
+      "Requirement already satisfied: pycryptodomex>=3.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from gpsoauth>=1.1.0->gkeepapi) (3.23.0)\n",
+      "Requirement already satisfied: requests>=2.0.0 in /home/codespace/.local/lib/python3.12/site-packages (from gpsoauth>=1.1.0->gkeepapi) (2.32.3)\n",
+      "Requirement already satisfied: urllib3>=1.26.0 in /home/codespace/.local/lib/python3.12/site-packages (from gpsoauth>=1.1.0->gkeepapi) (2.4.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/codespace/.local/lib/python3.12/site-packages (from requests>=2.0.0->gpsoauth>=1.1.0->gkeepapi) (3.4.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/codespace/.local/lib/python3.12/site-packages (from requests>=2.0.0->gpsoauth>=1.1.0->gkeepapi) (3.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/codespace/.local/lib/python3.12/site-packages (from requests>=2.0.0->gpsoauth>=1.1.0->gkeepapi) (2025.4.26)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install gkeepapi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e10662c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "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"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "96ee2c4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting notion_client\n",
+      "  Downloading notion_client-2.4.0-py2.py3-none-any.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: httpx>=0.23.0 in /home/codespace/.local/lib/python3.12/site-packages (from notion_client) (0.28.1)\n",
+      "Requirement already satisfied: anyio in /home/codespace/.local/lib/python3.12/site-packages (from httpx>=0.23.0->notion_client) (4.9.0)\n",
+      "Requirement already satisfied: certifi in /home/codespace/.local/lib/python3.12/site-packages (from httpx>=0.23.0->notion_client) (2025.4.26)\n",
+      "Requirement already satisfied: httpcore==1.* in /home/codespace/.local/lib/python3.12/site-packages (from httpx>=0.23.0->notion_client) (1.0.9)\n",
+      "Requirement already satisfied: idna in /home/codespace/.local/lib/python3.12/site-packages (from httpx>=0.23.0->notion_client) (3.10)\n",
+      "Requirement already satisfied: h11>=0.16 in /home/codespace/.local/lib/python3.12/site-packages (from httpcore==1.*->httpx>=0.23.0->notion_client) (0.16.0)\n",
+      "Requirement already satisfied: sniffio>=1.1 in /home/codespace/.local/lib/python3.12/site-packages (from anyio->httpx>=0.23.0->notion_client) (1.3.1)\n",
+      "Requirement already satisfied: typing_extensions>=4.5 in /home/codespace/.local/lib/python3.12/site-packages (from anyio->httpx>=0.23.0->notion_client) (4.13.2)\n",
+      "Downloading notion_client-2.4.0-py2.py3-none-any.whl (13 kB)\n",
+      "Installing collected packages: notion_client\n",
+      "Successfully installed notion_client-2.4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install notion_client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "060e0b22",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'topic' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnotion_client\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Client\n\u001b[32m      3\u001b[39m notion = Client(auth=\u001b[33m\"\u001b[39m\u001b[33mntn_636252122287LSqcICxbsFek4H8gvfpx4WH11l41XLmcQI\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      5\u001b[39m notion.pages.create(\n\u001b[32m      6\u001b[39m     parent={\u001b[33m\"\u001b[39m\u001b[33mdatabase_id\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33myour_database_id\u001b[39m\u001b[33m\"\u001b[39m},\n\u001b[32m      7\u001b[39m     properties={\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mTopic\u001b[39m\u001b[33m\"\u001b[39m: {\u001b[33m\"\u001b[39m\u001b[33mtitle\u001b[39m\u001b[33m\"\u001b[39m: [{\u001b[33m\"\u001b[39m\u001b[33mtext\u001b[39m\u001b[33m\"\u001b[39m: {\u001b[33m\"\u001b[39m\u001b[33mcontent\u001b[39m\u001b[33m\"\u001b[39m: \u001b[43mtopic\u001b[49m}}]},\n\u001b[32m      9\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mExplanation\u001b[39m\u001b[33m\"\u001b[39m: {\u001b[33m\"\u001b[39m\u001b[33mrich_text\u001b[39m\u001b[33m\"\u001b[39m: [{\u001b[33m\"\u001b[39m\u001b[33mtext\u001b[39m\u001b[33m\"\u001b[39m: {\u001b[33m\"\u001b[39m\u001b[33mcontent\u001b[39m\u001b[33m\"\u001b[39m: explanation}}]},\n\u001b[32m     10\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mVideo URL\u001b[39m\u001b[33m\"\u001b[39m: {\u001b[33m\"\u001b[39m\u001b[33murl\u001b[39m\u001b[33m\"\u001b[39m: video_url}\n\u001b[32m     11\u001b[39m     }\n\u001b[32m     12\u001b[39m )\n",
+      "\u001b[31mNameError\u001b[39m: name 'topic' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from notion_client import Client\n",
+    "\n",
+    "notion = Client(auth=\"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\")\n",
+    "\n",
+    "notion.pages.create(\n",
+    "    parent={\"database_id\": \"your_database_id\"},\n",
+    "    properties={\n",
+    "        \"Topic\": {\"title\": [{\"text\": {\"content\": topic}}]},\n",
+    "        \"Explanation\": {\"rich_text\": [{\"text\": {\"content\": explanation}}]},\n",
+    "        \"Video URL\": {\"url\": video_url}\n",
+    "    }\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e44854f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -430,7 +529,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
