dynamic MCQ Generater featuer addedd

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -422,106 +422,144 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "584cf1a4",
+   "id": "7e44854f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: gkeepapi in /usr/local/python/3.12.1/lib/python3.12/site-packages (0.16.0)\n",
-      "Requirement already satisfied: gpsoauth>=1.1.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from gkeepapi) (2.0.0)\n",
-      "Requirement already satisfied: future>=0.16.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from gkeepapi) (1.0.0)\n",
-      "Requirement already satisfied: pycryptodomex>=3.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from gpsoauth>=1.1.0->gkeepapi) (3.23.0)\n",
-      "Requirement already satisfied: requests>=2.0.0 in /home/codespace/.local/lib/python3.12/site-packages (from gpsoauth>=1.1.0->gkeepapi) (2.32.3)\n",
-      "Requirement already satisfied: urllib3>=1.26.0 in /home/codespace/.local/lib/python3.12/site-packages (from gpsoauth>=1.1.0->gkeepapi) (2.4.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/codespace/.local/lib/python3.12/site-packages (from requests>=2.0.0->gpsoauth>=1.1.0->gkeepapi) (3.4.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/codespace/.local/lib/python3.12/site-packages (from requests>=2.0.0->gpsoauth>=1.1.0->gkeepapi) (3.10)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/codespace/.local/lib/python3.12/site-packages (from requests>=2.0.0->gpsoauth>=1.1.0->gkeepapi) (2025.4.26)\n"
+      "Collecting google-generativeai\n",
+      "  Downloading google_generativeai-0.8.5-py3-none-any.whl.metadata (3.9 kB)\n",
+      "Requirement already satisfied: requests in /home/codespace/.local/lib/python3.12/site-packages (2.32.3)\n",
+      "Collecting google-ai-generativelanguage==0.6.15 (from google-generativeai)\n",
+      "  Downloading google_ai_generativelanguage-0.6.15-py3-none-any.whl.metadata (5.7 kB)\n",
+      "Collecting google-api-core (from google-generativeai)\n",
+      "  Downloading google_api_core-2.25.1-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Collecting google-api-python-client (from google-generativeai)\n",
+      "  Downloading google_api_python_client-2.175.0-py3-none-any.whl.metadata (7.0 kB)\n",
+      "Requirement already satisfied: google-auth>=2.15.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from google-generativeai) (2.40.3)\n",
+      "Requirement already satisfied: protobuf in /usr/local/python/3.12.1/lib/python3.12/site-packages (from google-generativeai) (5.29.5)\n",
+      "Requirement already satisfied: pydantic in /usr/local/python/3.12.1/lib/python3.12/site-packages (from google-generativeai) (2.11.7)\n",
+      "Requirement already satisfied: tqdm in /usr/local/python/3.12.1/lib/python3.12/site-packages (from google-generativeai) (4.67.1)\n",
+      "Requirement already satisfied: typing-extensions in /home/codespace/.local/lib/python3.12/site-packages (from google-generativeai) (4.13.2)\n",
+      "Collecting proto-plus<2.0.0dev,>=1.22.3 (from google-ai-generativelanguage==0.6.15->google-generativeai)\n",
+      "  Downloading proto_plus-1.26.1-py3-none-any.whl.metadata (2.2 kB)\n",
+      "Requirement already satisfied: googleapis-common-protos<2.0.0,>=1.56.2 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from google-api-core->google-generativeai) (1.70.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/codespace/.local/lib/python3.12/site-packages (from requests) (3.4.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/codespace/.local/lib/python3.12/site-packages (from requests) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/codespace/.local/lib/python3.12/site-packages (from requests) (2.4.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/codespace/.local/lib/python3.12/site-packages (from requests) (2025.4.26)\n",
+      "Requirement already satisfied: grpcio<2.0.0,>=1.33.2 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.15->google-generativeai) (1.73.1)\n",
+      "Collecting grpcio-status<2.0.0,>=1.33.2 (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.15->google-generativeai)\n",
+      "  Downloading grpcio_status-1.73.1-py3-none-any.whl.metadata (1.1 kB)\n",
+      "Requirement already satisfied: cachetools<6.0,>=2.0.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from google-auth>=2.15.0->google-generativeai) (5.5.2)\n",
+      "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from google-auth>=2.15.0->google-generativeai) (0.4.2)\n",
+      "Requirement already satisfied: rsa<5,>=3.1.4 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from google-auth>=2.15.0->google-generativeai) (4.9.1)\n",
+      "INFO: pip is looking at multiple versions of grpcio-status to determine which version is compatible with other requirements. This could take a while.\n",
+      "  Downloading grpcio_status-1.73.0-py3-none-any.whl.metadata (1.1 kB)\n",
+      "  Downloading grpcio_status-1.72.2-py3-none-any.whl.metadata (1.1 kB)\n",
+      "  Downloading grpcio_status-1.72.1-py3-none-any.whl.metadata (1.1 kB)\n",
+      "  Downloading grpcio_status-1.71.2-py3-none-any.whl.metadata (1.1 kB)\n",
+      "Requirement already satisfied: pyasn1>=0.1.3 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from rsa<5,>=3.1.4->google-auth>=2.15.0->google-generativeai) (0.6.1)\n",
+      "Collecting httplib2<1.0.0,>=0.19.0 (from google-api-python-client->google-generativeai)\n",
+      "  Downloading httplib2-0.22.0-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Collecting google-auth-httplib2<1.0.0,>=0.2.0 (from google-api-python-client->google-generativeai)\n",
+      "  Downloading google_auth_httplib2-0.2.0-py2.py3-none-any.whl.metadata (2.2 kB)\n",
+      "Collecting uritemplate<5,>=3.0.1 (from google-api-python-client->google-generativeai)\n",
+      "  Downloading uritemplate-4.2.0-py3-none-any.whl.metadata (2.6 kB)\n",
+      "Requirement already satisfied: pyparsing!=3.0.0,!=3.0.1,!=3.0.2,!=3.0.3,<4,>=2.4.2 in /home/codespace/.local/lib/python3.12/site-packages (from httplib2<1.0.0,>=0.19.0->google-api-python-client->google-generativeai) (3.2.3)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from pydantic->google-generativeai) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.33.2 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from pydantic->google-generativeai) (2.33.2)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.0 in /usr/local/python/3.12.1/lib/python3.12/site-packages (from pydantic->google-generativeai) (0.4.1)\n",
+      "Downloading google_generativeai-0.8.5-py3-none-any.whl (155 kB)\n",
+      "Downloading google_ai_generativelanguage-0.6.15-py3-none-any.whl (1.3 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m10.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading google_api_core-2.25.1-py3-none-any.whl (160 kB)\n",
+      "Downloading grpcio_status-1.71.2-py3-none-any.whl (14 kB)\n",
+      "Downloading proto_plus-1.26.1-py3-none-any.whl (50 kB)\n",
+      "Downloading google_api_python_client-2.175.0-py3-none-any.whl (13.7 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.7/13.7 MB\u001b[0m \u001b[31m31.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading google_auth_httplib2-0.2.0-py2.py3-none-any.whl (9.3 kB)\n",
+      "Downloading httplib2-0.22.0-py3-none-any.whl (96 kB)\n",
+      "Downloading uritemplate-4.2.0-py3-none-any.whl (11 kB)\n",
+      "Installing collected packages: uritemplate, proto-plus, httplib2, grpcio-status, google-auth-httplib2, google-api-core, google-api-python-client, google-ai-generativelanguage, google-generativeai\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9/9\u001b[0m [google-generativeai]ogle-generativeai]language]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed google-ai-generativelanguage-0.6.15 google-api-core-2.25.1 google-api-python-client-2.175.0 google-auth-httplib2-0.2.0 google-generativeai-0.8.5 grpcio-status-1.71.2 httplib2-0.22.0 proto-plus-1.26.1 uritemplate-4.2.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!pip install gkeepapi"
+    "pip install google-generativeai requests"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e10662c",
+   "id": "d7869d18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/python/3.12.1/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attempting to retrieve transcript...\n",
+      "Error fetching video details from YouTube API: 400 Client Error: Bad Request for url: https://www.googleapis.com/youtube/v3/videos?part=snippet%2CcontentDetails&id=wvANnvfOKV4&key=YOUR_YOUTUBE_DATA_API_KEY\n",
+      "Error generating transcript with LLM: 404 models/gemini-pro is not found for API version v1beta, or is not supported for generateContent. Call ListModels to see the list of available models and their supported methods.\n",
+      "Failed to retrieve transcript.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_groq import ChatGroq\n",
+    "GROQ_API_KEY=os.getenv(\"GROQ_API_KEY\")\n",
+    "llm=ChatGroq(model='gemma')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2813b5a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "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"
+    "from llm import llm\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "96ee2c4d",
+   "execution_count": 4,
+   "id": "b5d33f18",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting notion_client\n",
-      "  Downloading notion_client-2.4.0-py2.py3-none-any.whl.metadata (11 kB)\n",
-      "Requirement already satisfied: httpx>=0.23.0 in /home/codespace/.local/lib/python3.12/site-packages (from notion_client) (0.28.1)\n",
-      "Requirement already satisfied: anyio in /home/codespace/.local/lib/python3.12/site-packages (from httpx>=0.23.0->notion_client) (4.9.0)\n",
-      "Requirement already satisfied: certifi in /home/codespace/.local/lib/python3.12/site-packages (from httpx>=0.23.0->notion_client) (2025.4.26)\n",
-      "Requirement already satisfied: httpcore==1.* in /home/codespace/.local/lib/python3.12/site-packages (from httpx>=0.23.0->notion_client) (1.0.9)\n",
-      "Requirement already satisfied: idna in /home/codespace/.local/lib/python3.12/site-packages (from httpx>=0.23.0->notion_client) (3.10)\n",
-      "Requirement already satisfied: h11>=0.16 in /home/codespace/.local/lib/python3.12/site-packages (from httpcore==1.*->httpx>=0.23.0->notion_client) (0.16.0)\n",
-      "Requirement already satisfied: sniffio>=1.1 in /home/codespace/.local/lib/python3.12/site-packages (from anyio->httpx>=0.23.0->notion_client) (1.3.1)\n",
-      "Requirement already satisfied: typing_extensions>=4.5 in /home/codespace/.local/lib/python3.12/site-packages (from anyio->httpx>=0.23.0->notion_client) (4.13.2)\n",
-      "Downloading notion_client-2.4.0-py2.py3-none-any.whl (13 kB)\n",
-      "Installing collected packages: notion_client\n",
-      "Successfully installed notion_client-2.4.0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"I'm a large language model, I don't have the capability to directly access external links, including YouTube videos. However, I can guide you through the process of generating a transcript from the video.\\n\\nTo generate a transcript, you can follow these steps:\\n\\n1. **Copy the video URL**: Copy the URL of the YouTube video you provided: `https://www.youtube.com/watch?v=wvANnvfOKV4`\\n2. **Use a transcription tool**: You can use online transcription tools such as:\\n\\t* YouTube's built-in auto-transcription feature (not always available)\\n\\t* Rev.com\\n\\t* GoTranscript\\n\\t* Trint\\n\\t* Otter.ai\\n3. **Paste the video URL**: Paste the video URL into the transcription tool of your choice.\\n4. **Generate the transcript**: Follow the tool's instructions to generate the transcript. This may involve selecting the language, speaker identification, and other options.\\n5. **Copy and paste the transcript**: Once the transcript is generated, you can copy and paste it into a text editor or document.\\n\\nIf you'd like, I can try to help you find a transcription tool or guide you through the process. Alternatively, you can provide more context about the video, such as the title, speaker, or a brief summary, and I can try to help you find a transcript or provide a summary of the content.\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 283, 'prompt_tokens': 58, 'total_tokens': 341, 'completion_time': 1.029090909, 'prompt_time': 0.002889518, 'queue_time': 0.051737972, 'total_time': 1.031980427}, 'model_name': 'llama-3.3-70b-versatile', 'system_fingerprint': 'fp_6507bcfb6f', 'finish_reason': 'stop', 'logprobs': None}, id='run--e1a977ce-5d9b-4e82-9e14-509592827774-0', usage_metadata={'input_tokens': 58, 'output_tokens': 283, 'total_tokens': 341})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "!pip install notion_client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "060e0b22",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'topic' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnotion_client\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Client\n\u001b[32m      3\u001b[39m notion = Client(auth=\u001b[33m\"\u001b[39m\u001b[33mntn_636252122287LSqcICxbsFek4H8gvfpx4WH11l41XLmcQI\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      5\u001b[39m notion.pages.create(\n\u001b[32m      6\u001b[39m     parent={\u001b[33m\"\u001b[39m\u001b[33mdatabase_id\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33myour_database_id\u001b[39m\u001b[33m\"\u001b[39m},\n\u001b[32m      7\u001b[39m     properties={\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mTopic\u001b[39m\u001b[33m\"\u001b[39m: {\u001b[33m\"\u001b[39m\u001b[33mtitle\u001b[39m\u001b[33m\"\u001b[39m: [{\u001b[33m\"\u001b[39m\u001b[33mtext\u001b[39m\u001b[33m\"\u001b[39m: {\u001b[33m\"\u001b[39m\u001b[33mcontent\u001b[39m\u001b[33m\"\u001b[39m: \u001b[43mtopic\u001b[49m}}]},\n\u001b[32m      9\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mExplanation\u001b[39m\u001b[33m\"\u001b[39m: {\u001b[33m\"\u001b[39m\u001b[33mrich_text\u001b[39m\u001b[33m\"\u001b[39m: [{\u001b[33m\"\u001b[39m\u001b[33mtext\u001b[39m\u001b[33m\"\u001b[39m: {\u001b[33m\"\u001b[39m\u001b[33mcontent\u001b[39m\u001b[33m\"\u001b[39m: explanation}}]},\n\u001b[32m     10\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mVideo URL\u001b[39m\u001b[33m\"\u001b[39m: {\u001b[33m\"\u001b[39m\u001b[33murl\u001b[39m\u001b[33m\"\u001b[39m: video_url}\n\u001b[32m     11\u001b[39m     }\n\u001b[32m     12\u001b[39m )\n",
-      "\u001b[31mNameError\u001b[39m: name 'topic' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "from notion_client import Client\n",
-    "\n",
-    "notion = Client(auth=\"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\")\n",
-    "\n",
-    "notion.pages.create(\n",
-    "    parent={\"database_id\": \"your_database_id\"},\n",
-    "    properties={\n",
-    "        \"Topic\": {\"title\": [{\"text\": {\"content\": topic}}]},\n",
-    "        \"Explanation\": {\"rich_text\": [{\"text\": {\"content\": explanation}}]},\n",
-    "        \"Video URL\": {\"url\": video_url}\n",
-    "    }\n",
-    ")\n"
+    "llm.invoke(\"https://www.youtube.com/watch?v=wvANnvfOKV4  refer this link and generate the transcript\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e44854f",
+   "id": "cccf9cfc",
    "metadata": {},
    "outputs": [],
    "source": []
